cleanup and fix warnings